fixed dark mode toggle. cleaned up navbar

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@ body {
 }
 .add-note-bar-container {
   align-items: center;
-  margin-bottom: 1em;
+  margin-bottom: 2em;
 }
 
 .add-note-bar {
